# takuto-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: docker-compose.dind.yml  docker-compose.yml
examples/presets/rust/: config.toml
examples/react-vite/: README.md  config.toml  docker-compose.yml  maestro.yml  takuto.yml
examples/react-vite/.maestro/: config.toml  maestro.env
examples/react-vite/.maestro/workflows/: address_pr_comments.toml  implement_ticket.toml  merge_base.toml
examples/react-vite/.takuto/: config.toml  takuto.env
examples/react-vite/.takuto/workflows/: merge_base.toml
examples/ruby-rails/: README.md  config.toml  docker-compose.yml  takuto.yml
examples/ruby-rails/.maestro/: config.toml
examples/ruby-rails/.takuto/: config.toml
examples/rust/: README.md  docker-compose.yml  maestro.yml  takuto.yml
examples/rust/.maestro/: config.toml
examples/rust/.maestro/workflows/: address_pr_comments.toml
examples/rust/.takuto/: config.toml  takuto.env
src/: config.rs  dbwire.rs  main.rs  runtime.rs  templates.rs
src/commands/: auth.rs  mod.rs  setup.rs  start.rs  stop.rs
