[package]
name = "maestro"
version = "0.4.0"
edition = "2021"
description = "Interactive CLI for managing Maestro orchestration containers"
publish = false
license-file = "LICENSE"
repository = "https://github.com/morphet81/maestro"

[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11" }
console = "0.15"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
which = "7"

[package.metadata.release]
push = true
tag = true
tag-prefix = "v"
tag-message = "{{tag_name}}"
pre-release-commit-message = "release: v{{version}}"
