[package]
name = "takuto"
version = "0.5.2"
edition = "2021"
description = "Interactive CLI for managing Takuto orchestration containers"
publish = false
license-file = "LICENSE"
repository = "https://github.com/takuto-team/takuto-cli"

[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11" }
console = "0.15"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
which = "7"

[package.metadata.release]
push = true
tag = true
tag-prefix = "v"
tag-message = "{{tag_name}}"
pre-release-commit-message = "release: v{{version}}"
